ДЗ Способы поиска нужного HTML-элемента

--- a/element-search/menu/task.html
+++ b/element-search/menu/task.html
@@ -42,6 +42,50 @@
             <a href="https://netology.ru/contacts" class="menu__link">Контакты</a>
         </li>
     </ul>
+    
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio eveniet aut doloremque quae, deserunt enim rerum tempora. Voluptates, labore incidunt corporis quia error ab repudiandae fuga. Explicabo quam cupiditate nobis?
+    </p>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae accusamus, est pariatur quidem distinctio accusantium odio iure itaque quia sed. Quia fugit amet, nostrum expedita officia unde praesentium provident hic.  
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus corporis ut reprehenderit debitis recusandae perferendis amet expedita corrupti nihil aperiam vitae accusamus cum itaque, fugit, distinctio maiores sit autem laudantium!
+    </p>
+    
+    <ul class="menu menu_main">
+        <li class="menu__item">
+            <a href="https://netology.ru/" class="menu__link">Главная</a>
+        </li>
+        <li class="menu__item">
+            <a href="" class="menu__link">О компании</a>
+            <ul class="menu menu_sub">
+                <li class="menu__item">
+                    <a href="https://netology.ru/clients" class="menu__link">Клиенты</a>
+                </li>
+                <li class="menu__item">
+                    <a href="https://netology.ru/service" class="menu__link">Обслуживание</a>
+                </li>
+                <li class="menu__item">
+                    <a href="https://netology.ru/wearecool" class="menu__link">Награды</a>
+                </li>
+            </ul>
+        </li>
+        <li class="menu__item">
+            <a href="" class="menu__link">Услуги</a>
+            <ul class="menu menu_sub">
+                <li class="menu__item">
+                    <a href="https://netology.ru/learn" class="menu__link">Обучение</a>
+                </li>
+                <li class="menu__item">
+                    <a href="https://netology.ru/consult" class="menu__link">Консультации</a>
+                </li>
+            </ul>
+        </li>
+        <li class="menu__item">
+            <a href="https://netology.ru/contacts" class="menu__link">Контакты</a>
+        </li>
+    </ul>
     <script src="task.js"></script>
 </body>
 </html>
