--- a/html-forms/chat/task.html
+++ b/html-forms/chat/task.html
@@ -12,14 +12,12 @@
     <div class="chat-widget">
         <div class="chat-widget__area">
             <div class="chat-widget__messages-container">
-                <div class="chat-widget__messages" id="chat-widget__messages">
-                    <!--
-                        Сообщение от робота
-                        <div class="message">
-                            <div class="message__time">22:10</div>
-                            <div class="message__text">Добрый день!</div>
-                        </div>
-                        Сообщение от клиента
+                <div class="chat-widget__messages" id="chat-widget__messages">                    
+                    <div class="message">
+                        <div class="message__time">22:10</div>
+                        <div class="message__text">Добрый день!</div>
+                    </div>
+                    <!--    Сообщение от клиента
                         <div class="message message_client">
                             <div class="message__time">22:10</div>
                             <div class="message__text">Добрый день!</div>
